<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context="com.example.android.welcometowroclaw.MainActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/main_photo"
        android:src="@drawable/wroclaw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"/>

    <TextView
        android:text="@string/photo_text_big"
        style="@style/BigTextStyle"/>

</RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/sights"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/sights_string"
            style="@style/MenuItemStyle"/>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/museums"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/museums_string"
            style="@style/MenuItemStyle"/>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/restaurants"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/restaurants_string"
            style="@style/MenuItemStyle"/>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/events"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/events_string"
            style="@style/MenuItemStyle"/>
    </FrameLayout>

</LinearLayout>
